--- a/client/package.json
+++ b/client/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
     "react-resizable-panels": "^3.0.3",
+    "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5",
     "starknet": "^6.23.1",
     "tailwind-merge": "^3.3.1",
